--- a/client/public/style.css
+++ b/client/public/style.css
@@ -20,7 +20,7 @@ h1 {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shade*/
 }
 
-/* Titluri de secțiuni */
+/* Dection title */
 h2 {
     color: #495057; /* Moderate gray */
     font-size: 1.75rem;
@@ -29,7 +29,7 @@ h2 {
 
 /* Listă categorii */
 #categoryList {
-    max-height: 300px; /* Înălțime maximă pentru listă */
+    max-height: 300px; /* Maximum height for the list */
     overflow-y: auto; /* Scrolling if necessary */
 }
 
